fix get-started button on nav on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -725,6 +725,10 @@ h6 {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
+
+  .hide-on-mobile {
+    display: none;
+  }
 }
 
 /*--------------------------------------------------------------
